# gene-program-interpreter

./: .env.example  .gitignore  Plan-gene_program_interpreter.html  README.md  literature-tools-for-claude-code.md  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: minion.md
.claude/skills/gene-program-interpreter/: SKILL.md
configs/: brain_ec_e2e.yaml  example_generic.yaml  hepatocyte.yaml  hepatocyte_p10_12.yaml  hepatocyte_p10_p22.yaml  hepatocyte_p1_5.yaml  liver_demo.yaml
designs/pipeline-architecture/: Demo Narration.md  Gene Program Interpreter Pipeline.html  Pipeline Architecture Narration.md  Pipeline Architecture.html  _d_meta.json
designs/pipeline-architecture/video/: GPI_pipeline_captions.srt  GPI_pipeline_timeline.json  GPI_pipeline_transcript.md  GPI_pipeline_voiceover.m4a  GPI_tts_manifest.json  generate_neural_voice.mjs  narration_segments.json  render_pipeline_video.mjs  tts_config.json
docs/: ARCHITECTURE.md  DEMO_storyboard.md  FUTURE_claim_verification.md  INSTALLATION_ISSUES_SCG.md  INSTALL_MCP.md  Program 22 prompt REGENERATED.md  Program 22 prompt.md  pipeline_overview.html  research_protocol_map.html
docs/brain_ec_demo/: report.html
examples/brain_endothelial_demo/: Discovery_FP_moi15_seq2_thresh10_k100_default.csv  FB_moi15_seq2_loading_gene_k100_top300.csv  FP_moi15_seq2_cnmf_program_markers_celltype_l2_top10_enriched_depleted.csv  program_celltype_annotations_summary.csv
examples/liver_demo/: 50_CRT_log_nCount_RNA_log_nFeature_RNA_log_nFeature_CRISPR_thre5_log_nCount_CRISPR_thre5_aged_F.txt  50_CRT_log_nCount_RNA_log_nFeature_RNA_log_nFeature_CRISPR_thre5_log_nCount_CRISPR_thre5_young_F.txt  gene_loading_K50_0_5_top300.csv  gene_loading_K50_0_5_top300_with_uniqueness.csv  regulators.csv
gpi/: __init__.py  _logo_data.py  anthropic_batch.py  column_mapper.py  context_profile.py  dashboard.py  enrichment.py  evidence_context.py  gene_summaries.py  harmonizome_api.py  html_report.py  log_redaction.py  ncbi_api.py  parse_results.py  pipeline_state.py  presentation.py  presentation_lexicon.json  progress.py  research_evidence_adapter.py  run_pipeline.py  string_api.py  theme_representation.py  watch.py
literature-review/: SKILL.md  kernel.py
research/: __init__.py  _crossref.py  bundle.py  literature.py  mcp_servers.json  parallel.py  protocol.md  research_parallel.py  schema.py  verify.py
scripts/: make_logo.py  smoke_installed.sh
skills/interpret/: SKILL.md
skills/interpret/reference/: context.md  monitoring.md  report.md
tests/: conftest.py  test_celltype_evidence.py  test_cli_ux.py  test_context_profile.py  test_dashboard.py  test_dependencies.py  test_gene_selection_consistency.py  test_imports.py  test_log_redaction.py  test_packaging.py  test_presentation_live.py  test_progress.py  test_progress_detail.py  test_progress_liveness.py  test_research_pipeline.py  test_theme_parser.py  test_verify_tristate.py  test_volcano_report.py  test_watch.py
tests/fixtures/annotations/: summary.csv  topic_10_annotation.md  topic_18_annotation.md  topic_2_annotation.md
tests/fixtures/inputs/: gene_loading.csv
tests/fixtures/literature/: literature_context.json  program_10_literature_research_prompt.md
