[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-program-interpreter"
version = "0.1.0"
description = "Claude-first pipeline for interpreting weighted gene programs with parallel, auditable literature research."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    # Deterministic front-end (vendored from ProgExplorer)
    "pandas",
    "numpy",
    "requests",
    "matplotlib",
    "seaborn",
    "pillow",
    "markdown",
    "pyyaml",
    "jinja2",
    "beautifulsoup4",
    # Schema + LLM
    "pydantic>=2",
    "anthropic>=0.40",        # Message Batches API: client.messages.batches.*
    "claude-agent-sdk",       # parallel literature research fan-out (executor 2)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
# Live terminal progress view (rich step-tree + parallel-agent table). Optional: without it
# --progress degrades to clean one-line-per-event ASCII, and the skill's in-conversation
# markdown/progress.json path is unaffected.
progress = [
    "rich>=13",
]

[project.scripts]
gpi = "gpi.run_pipeline:main"

[project.urls]
Homepage = "https://github.com/ifanirene/gene-program-interpreter"
Repository = "https://github.com/ifanirene/gene-program-interpreter"

[tool.setuptools]
packages = ["gpi", "research"]

[tool.setuptools.package-data]
research = ["protocol.md"]
# Data a step needs at runtime must live INSIDE a declared package. package-data can only
# attach files that are already in one, so a file under configs/ or any other non-package
# directory exists in a source checkout and in no wheel — which is invisible in development
# and broken for every installed user. tests/test_packaging.py enforces this.
gpi = ["presentation_lexicon.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
